# vFlank

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  design_fusion_primers.py  get_flanking_sequence.py  mkdocs.yml  pyproject.toml  versions.json
.claude/: settings.local.json
.claude/skills/ddpcr-conventions/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/ARCHITECTURE/: index.html
0.1.0/DEVELOPER/: index.html
0.1.0/changelog/: index.html
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/reference/api/: index.html
0.1.0/reference/cli/: index.html
0.1.0/research/gnomad-api/: index.html
0.1.0/research/sv-vcf-input/: index.html
0.1.0/search/: search_index.json
0.1.0/user-guide/fusions/: index.html
0.1.0/user-guide/masking/: index.html
0.1.0/user-guide/small-variants/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/ARCHITECTURE/: index.html
0.2.0/DEVELOPER/: index.html
0.2.0/changelog/: index.html
0.2.0/getting-started/installation/: index.html
0.2.0/getting-started/quickstart/: index.html
0.2.0/includes/abbreviations/: index.html
0.2.0/reference/api/: index.html
0.2.0/reference/cli/: index.html
0.2.0/reference/glossary/: index.html
0.2.0/research/bam-consensus/: index.html
0.2.0/research/gnomad-api/: index.html
0.2.0/research/indel-aware-consensus/: index.html
0.2.0/research/sv-vcf-input/: index.html
0.2.0/user-guide/consensus/: index.html
0.2.0/user-guide/fusions/: index.html
0.2.0/user-guide/masking/: index.html
0.2.0/user-guide/small-variants/: index.html
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/ARCHITECTURE/: index.html
0.3.0/DEVELOPER/: index.html
0.3.0/changelog/: index.html
0.3.0/getting-started/installation/: index.html
0.3.0/getting-started/quickstart/: index.html
0.3.0/includes/abbreviations/: index.html
0.3.0/reference/api/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/ARCHITECTURE/: index.html
0.4.0/DEVELOPER/: index.html
0.4.0/changelog/: index.html
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/ARCHITECTURE/: index.html
0.5.0/DEVELOPER/: index.html
0.5.0/changelog/: index.html
0.5.0/stylesheets/: extra.css
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/ARCHITECTURE/: index.html
0.6.0/DEVELOPER/: index.html
0.6.0/changelog/: index.html
0.6.0/search/: search_index.json
0.6.0/stylesheets/: extra.css
0.6.0/web-tool/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/ARCHITECTURE/: index.html
dev/DEVELOPER/: index.html
dev/changelog/: index.html
dev/search/: search_index.json
dev/web-tool/: index.html
docs/: ARCHITECTURE.md  DEVELOPER.md  index.md  web-tool.md
docs/getting-started/: installation.md  quickstart.md  recommended-usage.md
docs/includes/: abbreviations.md
docs/reference/: api.md  cli.md  glossary.md
docs/research/: bam-consensus.md  emit-formats.md  genome-api.md  gnomad-api.md  indel-aware-consensus.md  orchestration-extraction.md  sv-vcf-input.md  web-app-and-hosting.md  webapp-design.md  webapp-repo-structure.md
docs/stylesheets/: extra.css
docs/user-guide/: consensus.md  fusions.md  masking.md  small-variants.md
src/vflank/: __init__.py  errors.py  logging.py  pipeline.py  sources.py
tests/integration/: test_consensus_bam.py  test_fusion_pipeline.py  test_run_api.py  test_small_pipeline.py  test_small_vcf.py
tests/unit/: test_breakpoints.py  test_chrom.py  test_consensus.py  test_emit_primer3.py  test_flanks.py  test_fusion.py  test_pipeline.py  test_popfreq.py  test_popfreq_api.py  test_reference_api.py  test_report.py  test_skips.py  test_variant.py  test_vcf.py
(+117 files in other folders)
