[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vflank"
dynamic = ["version"]
description = "Variant-aware flanking-sequence extraction and masking for ddPCR assay design"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Ronak Shah" }]
keywords = ["bioinformatics", "ddPCR", "primer-design", "flanking-sequence", "gnomAD", "MAF", "fusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pysam>=0.22",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/rhshah/vFlank"
Documentation = "https://rhshah.github.io/vFlank/"
Repository = "https://github.com/rhshah/vFlank"
Issues = "https://github.com/rhshah/vFlank/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mike>=2.1",
    "mkdocs-typer2>=0.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-section-index>=0.3",
    "mkdocs-mermaid2-plugin>=1.1",
    "mkdocs-panzoom-plugin>=0.5",
    "mkdocs-glightbox>=0.4",
]

[project.scripts]
vflank = "vflank.cli.app:app"

[tool.hatch.version]
path = "src/vflank/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vflank"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer's documented idiom puts typer.Argument()/Option() in parameter defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
